--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/mylibrary
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=Nicetomeetyou23!
 spring.datasource.driver-class-name=org.postgresql.Driver
